# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

*portage-1.8.9_pre18 (04 Mar 2002)

  04 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Bug fix in
  dep_bestmatch(); rev comparison now works correctly and dep_bestmatch will
  properly handle 2-digit revisions in particular.  This closes bug #952.
  
  04 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Thanks to a
  bug report by Bruce Locke, the long-standing bug where symlinks with
  different mtimes would still get unmerged is now fixed.  This allows glibc
  (of all things) to be unmerged safely.  We needed this fix.  Closes bug #964.
  
  03 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : KDEDIR ->
  KDEDIRS (fixing my typo)

*portage-1.8.9_pre17 (27 Feb 2002)

  27 Feb 2002; Daniel Robbins <drobbins@gentoo.org> emerge : --help
  documentation is now up-to-date; short options tweaked.
  
  26 Feb 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Fixed an
  unmerge error caused by digests now being recorded in lowercase.  unmerge now
  compensates for 100% backwards compatibility.  Moved "continue" outside of
  "try" block since this is disallowed in Python.  This fixes a python warning
  during fetch.
  
  26 Feb 2002; Geert Bevin <gbevin@gentoo.org> bin/dohtml : Added support for
  installing .gif files too since quite some docs still ship with those instead
  of .jpg or .png.

*portage-1.8.9_pre16 (25 Feb 2002)

  25 Feb 2002; Daniel Robbins <drobbins@gentoo.org> emerge : emerge syntax
  changed back to "classic" style; replaced dots with spinner, did a major code
  cleanup and removed pieces that will be rewritten for 1.8.9 final.  emerge
  documentation isn't up-to-date at all; I'm holding off on the --help rewrite
  until after 1.8.9 features have been finalized (soon!)
 
  25 Feb 2002; Daniel Robbins <drobbins@gentoo.org> : Added RESTRICT variable