@@ -1,6 +1,11 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
 
+  05 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Fixed two
+  bugs reported by danarmak relating to incomplete (not missing) message
+  digests.  They should now get regenerated automatically is "digest" is
+  in FEATURES and not confuse the fetch code.
+
 *portage-1.8.9_pre18 (04 Mar 2002)
 
   04 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py : Bug fix in
